<resources>
    <string name="app_name">midSYS</string>
    <string name="country_default">Not Available</string>
    <string name="language_default">German</string>
    <string name="register_text">Register</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/health</item>
        <item>@string/forum</item>
        <item>@string/tutorial</item>
        <item>@string/videos</item>
        <item>@string/midwives</item>
    </string-array>

    <string name="health">Health</string>
    <string name="forum">Forum</string>
    <string name="tutorial">Tutorial</string>
    <string name="videos">Videos</string>
    <string name="midwives">MidWives</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="fullName">Full Name</string>
    <string name="Age">Age</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="pp">Previous Pregnancy</string>
    <string name="email">Email Id</string>
    <string name="nop">Number of Pregnancy</string>
    <string name="signUp">SIGN UP</string>
    <string name="next">Next</string>
    <string name="registration">Registration</string>
    <string name="location">Location</string>
    <string name="passowrd">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="personality">This is a personality test, it will help you understand why you act the way that you do and how your
personality is structured</string>

    <string name="rate">1=disagree, 2=slightly disagree, 3=neutral, 4=slightly agree and 5=agree</string>

    <string name="ques1">Get stressed out easily</string>
    <string name="ques2">Take time out for others</string>
    <string name="ques3">Am relaxed most of the time</string>
    <string name="ques4">Have a soft heart</string>
    <string name="ques5">Am quick to understand things</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="midSYSToken">misdsysToken</string>
    <string name="midSYSMsg">message</string>
    <string name="other_message">Hi</string>
    <string name="mine_message">Hello I have a problem</string>

    <string name="action_settings">Settings</string>

    <string name="single_view">Single View</string>
</resources>
