<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_health"
            android:checked="false"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/health"/>

        <item
            android:id="@+id/drawer_forum"
            android:checked="false"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/forum"/>

        <item
            android:id="@+id/drawer_tutorial"
            android:checked="false"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/tutorial"/>

        <item
            android:id="@+id/drawer_videos"
            android:checked="false"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/videos"/>

        <item
            android:id="@+id/drawer_midwives"
            android:checked="false"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/midwives"/>

    </group>
</menu>