<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context="digitalhealth.de.midsys.fragment.Registration_1">
        s

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/registration"
            android:textColor="@color/charcoal"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/personality"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="@string/personality"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/ques1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight=".8"
                android:background="@android:color/transparent"

                android:padding="10dp"
                android:text="@string/ques1"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ques1_s"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/seekBarDays"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="18dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".2"
                android:gravity="right"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/daysCountText"
            android:max="5"
            android:paddingBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/ques2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight=".8"
                android:background="@android:color/transparent"

                android:padding="10dp"
                android:text="@string/ques2"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ques2_s"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/seekBarDays"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="18dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".2"
                android:gravity="right"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/daysCountText"
            android:max="5"
            android:paddingBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/ques3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight=".8"
                android:background="@android:color/transparent"

                android:padding="10dp"
                android:text="@string/ques3"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ques3_s"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/seekBarDays"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="18dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".2"
                android:gravity="right"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/daysCountText"
            android:max="5"
            android:paddingBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/ques4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight=".8"
                android:background="@android:color/transparent"

                android:padding="10dp"
                android:text="@string/ques4"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ques4_s"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/seekBarDays"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="18dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".2"
                android:gravity="right"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/daysCountText"
            android:max="5"
            android:paddingBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/ques5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight=".8"
                android:background="@android:color/transparent"

                android:padding="10dp"
                android:text="@string/ques5"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ques5_s"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/seekBarDays"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="18dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".2"
                android:gravity="right"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/daysCountText"
            android:max="5"
            android:paddingBottom="12dp" />
        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="3dp"
            android:text="@string/register_text"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/terms_conditions"
            android:textColor="@color/black"
            android:textSize="14sp" />




        <!--TextView
            android:id="@+id/already_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textColor="@color/charcoal"
            android:textSize="15sp" /-->

    </LinearLayout>
</ScrollView>